fix z-index pb

--- a/styles/style.css
+++ b/styles/style.css
@@ -5,7 +5,7 @@ html, body, .table-responsive {
 }
 
 .table-responsive {
-    display: flex;
+    /*display: flex;*/
     flex-direction: column;
 }
 
@@ -51,15 +51,13 @@ html, body, .table-responsive {
     width : 100%;
     border-radius: 0px;
     height: 10vh;
+    position: relative;
+    z-index: 0;
 }
 
 .scoreGrid {
     height: 90%;
     /*vertical-align: middle !important;*/
-}
-
-.modal-content {
-    width: fit-content;
 }
 
 input {
